--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,23 @@
 {
-    "java.configuration.updateBuildConfiguration": "interactive",
-    "java.compile.nullAnalysis.mode": "automatic"
+    "java.configuration.updateBuildConfiguration": "automatic",
+    "java.compile.nullAnalysis.mode": "automatic",
+    "sqltools.connections": [
+        {
+            "mysqlOptions": {
+                "authProtocol": "default",
+                "enableSsl": "Disabled"
+            },
+            "previewLimit": 50,
+            "server": "localhost",
+            "port": 3306,
+            "driver": "MySQL",
+            "name": "meditech",
+            "database": "meditech",
+            "username": "root",
+            "askForPassword": true
+        }
+    ],
+    "cSpell.words": [
+        "Configurer"
+    ]
 }
