--- a/pom.xml
+++ b/pom.xml
@@ -112,6 +112,11 @@
     		<groupId>org.springframework.boot</groupId>
     		<artifactId>spring-boot-starter-freemarker</artifactId>
     	</dependency>
+
+    	<dependency>
+    		<groupId>org.springframework.boot</groupId>
+    		<artifactId>spring-boot-starter-actuator</artifactId>
+    	</dependency>
 	</dependencies>
 
     <properties>
