--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,6 +10,10 @@ spring.jpa.show-sql=true
 server.port = 8080
 
 springdoc.swagger-ui.path=/swagger-ui/
+springdoc.show-actuator=true
+
+management.endpoints.web.exposure.include=*
+management.endpoints.web.exposure.exclude=threaddump
 
 spring.mail.port=587
 spring.mail.protocol=smtp
@@ -32,3 +36,5 @@ application.cors.allowedOrigins=http://127.0.0.1:5500/, http://localhost:5173/
 application.cors.allowedMethods=GET, POST, PUT, DELETE
 application.cors.allowedHeaders=Authorization, Content-Type
 
+application.predict.service.url=https://cloudsip202324.pythonanywhere.com
+# https://cloudsip202324.pythonanywhere.com/disease/brain-tumor
